	PR c++/10446 	* search.c (lookup_fnfields_1): Handle empty slots in the method 	vector.

PR c++/10446
	* g++.dg/parse/crash3.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@65962 138bc75d-0d04-0410-961f-82ee72b054a4