gcc/testsuite/g++.dg/parse/crash3.C
@@ -1,0 +1,2 @@
+template <class T> struct L { struct I {}; };
+template <class T> void L<T>::I::foo() {} // { dg-error "" }
